# PORTFOLIO

./: .gitattributes  .gitignore  AQUA-OS-PRO-IMPLEMENTATION-SUMMARY.md  Build_aqua_os_kernel.py  CONTRIBUTING.md  Makefile  README.md  README.md.old  ROADMAP.md  SMOKE_TEST_VALIDATION_SUMMARY.md  TFA_QUANTUM_BRIDGE_README.md  change_notice.yaml  foundry.toml  hardhat.config.js  integration_test_results.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.ci/: Makefile
.github/: ASI-T-COPILOT-AGENT-STYLEGUIDE.md  CODEOWNERS  COPILOT_AGENT_QUICK_REFERENCE.md  COPILOT_INSTRUCTIONS.md  copilot-instructions.md
0-STRATEGY/: GOVERNANCE.md  MASTER-PROJECT-FRAMEWORK.md  MISSION.md  VISION.md
00-00-ASI-T-GENESIS/: README.md
01-00-USE-CASES-ENABLED/: README.md
02-00-PORTFOLIO-ENTANGLEMENT/: README.md
2-DOMAINS-LEVELS/: AQUA-OS-PRO-SPEC.md  _LLC-HIERARCHY.md
6-UTCS-BLOCKCHAIN/: TEKNIA.md  utcs-blockchain-framework.md
8-RESOURCES/: PromptEngineeringGuide.tsx  TFA-ARCHITECTURE.md  copilot_uix.md  llc-map.yaml  readme.md
ASIT-GENESIS-0000-00-00-00-000-OV/: R0_as_Genesis.md  Rev_0_as_Genesis.md
aqua-qpu/: .gitignore  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml
contracts/: InnovationValuation.sol  TekniaToken.sol  UTCSRegistry.sol
docs/: AQUA-OS-BUILD-001-00.md  cross-domain-workflow.md  intent-agent-idempotent.md  link-check-system.md  quantum-classical-bridge.md  utcs-integration-workflow.md
id: ASIT-GENESIS-0000-00-00-00-000-OV/: llc: QS.md
k8s/: namespace.yaml
schemas/: FADEC_X.spec.json  (+8 more)
(+4328 files in other folders)
