[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robbbot_asi_t_transition"
version = "0.1.0"
description = "Robbbo-T — Aerospace Super-Intelligence Transformers (Sustainable Industry Transition)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<2.0",
  "requests>=2.28,<3.0",
  "PyYAML>=6.0.1,<7.0",
  "PyJWT>=2.8,<3.0",
]

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.9,<4.0"]
anyio = ["anyio>=4.0,<6.0"]
dev = [
  "pytest>=7.4,<9.0",
  "pytest-asyncio>=0.21,<0.24",
]
trio = [
  "trio>=0.25,<0.27",
  "httpx>=0.27,<0.28",
  "pytest-trio>=0.8,<0.9",
]

[tool.setuptools.packages.find]
where = ["src"]
